# full_stack_Fast_API_todo_app

./: .env  Dockerfile  README.md  compose.yml  pyproject.toml
tests/: test_main.py
todo/: main.py  model.py  setting.py
todo/tests/: test_main.py
