[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Nasir Abbas <akhtarabbas.islamicreaction@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlmodel = "^0.0.21"
psycopg = {extras = ["binary"], version = "^3.1.19"}
pytest = "^8.2.2"
httpx = "^0.27.0"
 
 [tool.poetry.scripts]
dev= "todo.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
